<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
            android:background="@color/background">


    <TextView
            android:id="@+id/Greeting_message"
            android:layout_width="match_parent"
            android:layout_height="62dp"
            android:text="@string/HelloMessage"
            android:textColor="@color/colorAccent"
            android:textSize="20sp"
            android:layout_marginTop="37dp"/>
    <Button
            android:id="@+id/normalsudoku"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sudokux4"
            android:text="@string/normal_sudoku"
            android:layout_marginTop="39dp"/>
    <Button
            android:id="@+id/sudokux4"
            android:layout_below="@+id/Greeting_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sudoku_x_four"
            android:layout_marginTop="8dp"/>
    <Button
            android:id="@+id/sudokux16"
            android:layout_below="@+id/normalsudoku"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sudoku_x_sixteen"
            android:layout_marginTop="40dp"/>

    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sudokuColour"
            android:layout_below="@+id/sudokux16"
            android:text="@string/colour_sudoku"
            android:layout_marginTop="40dp"/>

</RelativeLayout>